// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager renders FileManager when type is file 1`] = `
<FileManager
  prop1="foo"
  prop2="bar"
  prop3="baz"
  type="file"
/>
`;

exports[`AttachmentManager renders ImageManager when type is image 1`] = `
<DragDropContext(ImageManager)
  prop1="foo"
  prop2="bar"
  prop3="baz"
  type="image"
/>
`;

exports[`FileManager matches last snapshot 1`] = `
<div
  data-styleName="file-manager"
>
  <div
    data-styleName="section-label"
  >
    Files
  </div>
  <div
    data-styleName="file-previews"
  >
    <FilePreview
      key="0"
      position={0}
      removeFile={[Function]}
      url="foo.pdf"
    />
    <FilePreview
      key="1"
      position={1}
      removeFile={[Function]}
      url="bar.zip"
    />
    <div
      data-styleName="loading-file"
    >
      Loading...
    </div>
    <Connect(ChangeImageButton)
      attachmentType="file"
      data-styleName="add-file-row"
      update={[Function]}
      uploadSettings={
        Object {
          "id": 1,
          "type": "post",
        }
      }
    >
      <div
        data-styleName="add-file"
      >
        <span
          data-styleName="add-file-plus"
        >
          +
        </span>
         Add File
      </div>
    </Connect(ChangeImageButton)>
  </div>
</div>
`;

exports[`FilePreview matches last snapshot 1`] = `
<div
  data-styleName="file-preview"
>
  <Icon
    data-styleName="icon-document"
    name="Document"
  />
  <div
    data-styleName="file-name"
  >
    foo.pdf
  </div>
  <div
    data-styleName="file-size"
  >
    23.3mb
  </div>
  <Icon
    data-styleName="remove-file"
    name="Ex"
    onClick={[Function]}
  />
</div>
`;

exports[`ImageManager matches last snapshot 1`] = `
<div
  data-styleName="image-manager"
>
  <div
    data-styleName="section-label"
  >
    Images
  </div>
  <div
    data-styleName="image-previews"
  >
    <DropTarget(DragSource(ImagePreview))
      key="0"
      position={0}
      removeImage={[Function]}
      switchImages={[Function]}
      url="foo.png"
    />
    <DropTarget(DragSource(ImagePreview))
      key="1"
      position={1}
      removeImage={[Function]}
      switchImages={[Function]}
      url="bar.jpg"
    />
    <div
      data-styleName="add-image"
    >
      <Loading />
    </div>
    <Connect(ChangeImageButton)
      attachmentType="image"
      update={[Function]}
      uploadSettings={
        Object {
          "id": 1,
          "type": "post",
        }
      }
    >
      <div
        data-styleName="add-image"
      >
        +
      </div>
    </Connect(ChangeImageButton)>
  </div>
</div>
`;

exports[`ImagePreview matches last snapshot 1`] = `
<div
  data-styleName="image-preview"
>
  <div
    data-styleName="image"
    style={
      Object {
        "backgroundImage": "url(foo.zng)",
      }
    }
  >
    <Icon
      data-styleName="remove-image"
      name="Ex"
      onClick={[Function]}
    />
    <div
      data-styleName="drag-preview"
    />
  </div>
</div>
`;
